# AfricansTalkingUSSD

./: README.md  main.py  pyproject.toml
logic/: sms.py
